--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,21 @@
 tasks:
-  - name: initialize
+  - name: install google-cloud-sdk
+    before: |
+      curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
+      tar -xvf google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
+      ./google-cloud-sdk/install.sh
+      rm google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
+    init: |
+      gcloud auth login
+      read -p "Enter Your GCP Project ID: " GCP_ID
+      gcloud config set project $GCP_ID
+      gcloud auth application-default login
+  - name: neptune
     init: |
       pip install neptune-client lightgbm neptune-lightgbm
-      pip install graphviz    
+      pip install google-cloud-bigquery
+      pip install pandas
+      pip install pyarrow
+      pip install pandas_gbq
+      pip install google-cloud-bigquery[bqstorage,pandas]
+      pip install google-cloud-bigquery-storage
