--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,20 +1,17 @@
 tasks:
   - name: install google-cloud-sdk
-    before: |
+    init: |
       curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
       tar -xvf google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
       ./google-cloud-sdk/install.sh
       rm google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
-    init: |
-      gp sync-done gc-sdk
-  - name: gcloud setting
-    init: |
-      gp sync-await gc-sdk
+      exec bash
       gcloud auth login
       read -p "Enter Your GCP Project ID: " GCP_ID
       gcloud config set project $GCP_ID
       gcloud auth application-default login
-  - name: neptune
+      gp sync-done gc-sdk
+  - name: neptune and pips
     init: |
       gp sync-await gc-sdk
       pip install neptune-client lightgbm neptune-lightgbm
