finalize .gitpod.yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,15 +5,13 @@ tasks:
       tar -xvf google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
       ./google-cloud-sdk/install.sh
       rm google-cloud-sdk-358.0.0-linux-x86_64.tar.gz
-      gp sync-done gc-sdk
-  - name: neptune and pips
-    init: |
-      gp sync-await gc-sdk
-      exec bash
+      . ~/.bashrc 
+      # exec bash
       gcloud auth login
       read -p "Enter Your GCP Project ID: " GCP_ID
       gcloud config set project $GCP_ID
       gcloud auth application-default login
+      gp sync-done gc-sdk
   - name: neptune and pips
     init: |
       gp sync-await gc-sdk
