--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,19 +9,20 @@ tasks:
       gcloud auth login
       read -p "Enter Your GCP Project ID: " GCP_ID
       gcloud config set project $GCP_ID
+      export GCLOUD_PROJECT=$GCP_ID
       gcloud auth application-default login
-      gp sync-done gc-sdk
-  - name: Install neptune, pip, jupyter, Configure jupytext
-    init: |
-      gp sync-await gc-sdk
+
       pip install neptune-client lightgbm neptune-lightgbm neptune-notebooks
       pip install -r requirements.txt # pip freeze > requirements.txt
       jupyter notebook --generate-config
       echo -e '\nc.NotebookApp.contents_manager_class = "jupytext.TextFileContentsManager"' >> ~/.jupyter/jupyter_notebook_config.py
       echo -e '\nc.ContentsManager.default_jupytext_formats = "ipynb,py"' >> ~/.jupyter/jupyter_notebook_config.py
       jupyter nbextension enable --py neptune-notebooks
-      export GCLOUD_PROJECT=$GCP_ID
+      gp sync-done gc-sdk
       jupyter notebook --ip=*
+  - name: new shell
+    init: |
+      gp sync-await gc-sdk
     openMode: split-right
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
