wip lgbm adaptation modifying

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,6 +10,7 @@ tasks:
       read -p "Enter Your GCP Project ID: " GCP_ID
       gcloud config set project $GCP_ID
       export GCLOUD_PROJECT=$GCP_ID
+      eval "echo -e '\nexport GCLOUD_PROJECT="$GCP_ID"' >> ~/.bashrc"
       gcloud auth application-default login
 
       pip install neptune-client lightgbm neptune-lightgbm neptune-notebooks
